<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#DD1C2C65"
        />

    <TextView
        android:id="@+id/name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionBar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        tools:text="Name of Company" />

    <TextView
        android:id="@+id/compdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="start|center_horizontal|center_vertical"
        android:paddingBottom="16dp"
        android:text="Details about the company should be displayed here and any amount iof data should be good " />
/////////////////////////////////////////////////////////////////////////////////////////////

    <LinearLayout
        android:id="@+id/linear0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/compdetail"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_marketcap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/market_cap" />

            <TextView
                android:id="@+id/marketcap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Value 0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"

            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_52_week_range" />

            <TextView
                android:id="@+id/weekrange52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Value 1" />
        </LinearLayout>
    </LinearLayout>
//////////////////////////////////////////////////////////////////

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear0"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="58dp"

            android:layout_weight="5"
            android:gravity="center|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Value 0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_weight="5"

            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/p_e_ratio" />

            <TextView
                android:id="@+id/pe_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Value 1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_weight="5"

            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/eps" />

            <TextView
                android:id="@+id/eps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Value 1" />
        </LinearLayout>
    </LinearLayout>
//////////////////////////////////////////////////////////////////////////////////

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_cagr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cagr" />

            <TextView
                android:id="@+id/cagr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Value 0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"

            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_beta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text=" β" />

            <TextView
                android:id="@+id/beta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Value 1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"

            android:orientation="vertical">

            <TextView
                android:id="@+id/text_dividend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/divided_yield" />

            <TextView
                android:id="@+id/dividend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Value 1" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/watchad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/value_watch_ad" />

</RelativeLayout>

